Generate the summaries for the test and validation partitions too

--- a/Summarize_codesearchnet_for_python.ipynb
+++ b/Summarize_codesearchnet_for_python.ipynb
@@ -202,8 +202,7 @@
         "                   truncation=True).input_ids.to('cuda')\n",
         "\n",
         "\n",
-        "#for PARTITION in ['train', 'test', 'validation']:\n",
-        "for PARTITION in ['train']:\n",
+        "for PARTITION in ['train', 'test', 'validation']:\n",
         "  dataloader = DataLoader(dataset[PARTITION], \n",
         "                          batch_size=BATCH_SIZE, \n",
         "                          collate_fn=tokenization_collator)\n",
