--- a/Summarize_codesearchnet_for_python.ipynb
+++ b/Summarize_codesearchnet_for_python.ipynb
@@ -33,32 +33,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ol4su2DMa_kJ"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import files \n",
-        "files.upload()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JqgiLaS0a5tq"
-      },
-      "outputs": [],
-      "source": [
-        "!mkdir ~/.kaggle\n",
-        "!cp kaggle.json ~/.kaggle/\n",
-        "!chmod 600 ~/.kaggle/kaggle.json"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Im-RfeRablcJ"
+        "id": "Im-RfeRablcJ",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -79,7 +55,7 @@
         "    kaggle.api.dataset_download_files(\n",
         "        \"omduggineni/codesearchnet\", path=path, unzip=True\n",
         "    )\n",
-        "\n",
+        "    \n",
         "download_dataset_from_kaggle()"
       ]
     },
@@ -104,6 +80,8 @@
         "\n",
         "from datasets import load_dataset\n",
         "from pathlib import Path\n",
+        "\n",
+        "LANG = 'python'\n",
         "\n",
         "def load_local_dataset(lang=\"all\", path=\"data\"):\n",
         "    \"\"\"\n",
@@ -144,7 +122,7 @@
         "\n",
         "    return dataset\n",
         "\n",
-        "dataset = load_local_dataset('python')"
+        "dataset = load_local_dataset(LANG)"
       ]
     },
     {
@@ -166,7 +144,7 @@
       "source": [
         "from transformers import RobertaTokenizer, T5ForConditionalGeneration\n",
         "tokenizer = RobertaTokenizer.from_pretrained('Salesforce/codet5-base', truncation_side='right')\n",
-        "model = T5ForConditionalGeneration.from_pretrained('Salesforce/codet5-base-codexglue-sum-python').to(\"cuda\")"
+        "model = T5ForConditionalGeneration.from_pretrained(f'Salesforce/codet5-base-codexglue-sum-{LANG}').to(\"cuda\")"
       ]
     },
     {
@@ -182,6 +160,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "LtmFMCPVuf3j"
       },
       "outputs": [],
@@ -190,7 +171,7 @@
         "from tqdm.auto import tqdm\n",
         "import json\n",
         "\n",
-        "BATCH_SIZE = 16\n",
+        "BATCH_SIZE = 32\n",
         "PARTITION = 'train'\n",
         "#all_summaries = []\n",
         "\n",
@@ -207,7 +188,7 @@
         "                          batch_size=BATCH_SIZE, \n",
         "                          collate_fn=tokenization_collator)\n",
         "\n",
-        "  with open(PARTITION + '.jsonl', 'w') as f:\n",
+        "  with open(PARTITION + f'-{LANG}.jsonl', 'w') as f:\n",
         "    for batch_num, batch_data in tqdm(enumerate(iter(dataloader)), \n",
         "                                      total=(len(dataset[PARTITION]) // BATCH_SIZE) + 1):\n",
         "      \n",
@@ -225,69 +206,82 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "r1-aMNWnYU4n"
+        "id": "i--G3NMHBBsK"
       },
       "outputs": [],
       "source": [
-        "import gzip\n",
+        "import gzip, json\n",
         "\n",
-        "with gzip.open('dataset.jsonl.gz', 'w') as w:\n",
+        "with gzip.open(f'dataset_{LANG}.jsonl.gz', 'w') as w:\n",
         "  for PARTITION in ['train', 'test', 'validation']:\n",
-        "    with open(PARTITION + '.jsonl') as f:\n",
+        "    with open(PARTITION + f'-{LANG}.jsonl') as f:\n",
         "      for line_pos, line in enumerate(f.readlines()):\n",
+        "        summary = json.loads(line)\n",
+        "        if len(summary['summary']) > 350:\n",
+        "            continue\n",
+        "            \n",
         "        d = dataset[PARTITION][line_pos].copy()\n",
-        "        d.update(json.loads(line))\n",
-        "        b = json.dumps(d) + '\\n'\n",
-        "        w.write(b.encode('UTF-8'))"
+        "        d.update(summary)\n",
+        "        b = json.dumps(d)\n",
+        "        w.write(b.encode('UTF-8'))\n",
+        "        w.write('\\n'.encode('UTF-8'))\n"
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### PUSH THE DATASET INTO HUGGINGFACE'S HUB"
-      ],
-      "metadata": {
-        "id": "P3SUn3mQs1lz"
-      }
-    },
-    {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Qc7ANkjIBBsL"
+      },
+      "outputs": [],
       "source": [
         "from huggingface_hub import notebook_login\n",
+        "\n",
         "notebook_login()"
-      ],
-      "metadata": {
-        "id": "_6jaUZRsy1-R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "processed_dataset = load_dataset('json', data_files='./dataset.jsonl.gz')\n",
-        "processed_dataset.push_to_hub(\"Nan-Do/codesearchnet_python\")"
-      ],
-      "metadata": {
-        "id": "zcZnzfqj0t3i"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "6-7KPky6BBsM"
+      },
+      "outputs": [],
+      "source": [
+        "processed_dataset = load_dataset('json', data_files=f'./dataset_{LANG}.jsonl.gz')\n",
+        "processed_dataset.push_to_hub(f'Nan-Do/code-search-net-{LANG}')"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "private_outputs": true,
-      "provenance": [],
-      "gpuType": "T4"
+      "collapsed_sections": [
+        "jQg6hsMhbuod",
+        "K9sCPQzIb278",
+        "tDzmSa0loVOC",
+        "iRzz39jDb8AT"
+      ],
+      "machine_shape": "hm",
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.9"
     }
   },
   "nbformat": 4,
